# AI_Local_Chat_PDF

./: alembic.ini  config.py  database.py  db_diagnostics.py  init_db.py  lmstudio_client.py  main.py  migrate.py  pyproject.toml  rag_system.py  requirements.txt
alembic/: env.py
docs/: BACKLOG.md  BRD.md  CHANGELOG.md  DEVELOPMENT.md  LOGGING.md  PIPELINE.md  PRD.md  README.md  USER_STORIES.md  acceptance_criteria.md
static/: index.html  logs.html  script.js  style.css
tests/: test_database.py  test_logging.py  test_migrations.py
